# be18-4th-Queue-SpecGuard

./: .gitignore  Jenkinsfile  README.md
backend/: build.gradle
backend/src/test/java/com/beyond/specguard/: CompanyInfoModi.java
backend/src/test/java/com/beyond/specguard/model/service/: ChangePasswordTest.java  DeleteClientCompanyTest.java  DeleteClientUserTest.java  UpdateClientCompanyTest.java  UpdateClientUserTest.java
backend/src/test/java/com/beyond/specguard/resume/model/service/: ResumeServiceTest.java
be18-specguard-backend/: Jenkinsfile
be18-specguard-backend/backend/: .dockerignore  Dockerfile
be18-specguard-backend/backend/src/main/java/com/beyond/specguard/common/config/: OpenApiConfig.java  SecurityConfig.java  WebClientConfig.java
be18-specguard-backend/backend/src/main/java/com/beyond/specguard/event/: CrawlingCompletionScheduler.java
be18-specguard-backend/backend/src/main/resources/: application.properties
be18-specguard-backend/backend/src/test/resources/: application-test.properties
be18-specguard-backend/python-server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  run.py
be18-specguard-backend/python-server/app/: main.py
be18-specguard-frontend/: .env.prod  .env.production  .gitignore  Dockerfile  Jenkinsfile  index.html  vite.config.js
be18-specguard-frontend/src/api/: applicantApi.js  axios.js  refresh.js
be18-specguard-frontend/src/views/applicant/: ApplicantVerify.vue
be18-specguard-frontend/src/views/company/: CompanySignupInfo.vue
(+10 files in other folders)
